// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-code-block Copy button is not visible if the language is set to console 1`] = `
<amplify-code-block class="css-1lj8awz css-75wbz6" language="console">
  <!---->
  <div class="css-khgmir"></div>
</amplify-code-block>
`;

exports[`amplify-code-block Copy button is visible for languages other than console 1`] = `
<amplify-code-block class="css-1lj8awz css-75wbz6" language="javascript">
  <!---->
  <div class="css-khgmir"></div>
  <button class="css-16vr62x">
    <span>
      copy
    </span>
  </button>
</amplify-code-block>
`;

exports[`amplify-code-block Render logic should render 1`] = `
<amplify-code-block class="css-1lj8awz css-75wbz6">
  <!---->
  <div class="css-khgmir"></div>
  <button class="css-16vr62x">
    <span>
      copy
    </span>
  </button>
</amplify-code-block>
`;
